--- a/env.yml
+++ b/env.yml
@@ -23,3 +23,6 @@ dependencies:
       - scipy==1.10.1
       - mrcfile==1.4.3
       - pandas==2.0.2
+      - wandb==0.15.12
+      - docopt==0.6.2
+      - skimage==0.22.0
