added a sample list to the multirun config

--- a/cryovit/configs/dino_features.yaml
+++ b/cryovit/configs/dino_features.yaml
@@ -16,6 +16,23 @@ batch_size: 128
 # Sample to vectorize using DINOv2
 sample: ???
 
+# Optional: A list of samples to vectorize
+sample_list:
+  BACHD,
+  BACHD_controlRNA,
+  BACHD_pias1,
+  dN17_BACHD,
+  Q109,
+  Q18,
+  Q20,
+  Q53,
+  Q53_KD,
+  Q66,
+  Q66_GRFS1,
+  Q66_KD,
+  WT,
+  cancer
+
 #################### Do not modify #####################
 
 defaults:
@@ -26,5 +43,8 @@ defaults:
 
 hydra:
   mode: MULTIRUN
+  sweeper:
+    params:
+      sample: ${sample_list}
   sweep:
     dir: /tmp/${oc.env:USER}/multirun
