--- a/cryovit/configs/eval_model.yaml
+++ b/cryovit/configs/eval_model.yaml
@@ -2,7 +2,7 @@ label_key: mito
 
 exp_paths:
   cryovit_root: /sdf/home/s/sanketg/projects/CryoVIT
-  exp_dir: ${.cryovit_root}/experiments/${exp_name}
+  exp_dir: ${.cryovit_root}/experiments
   tomo_dir: ${.cryovit_root}/cryovit_dataset/dino_features
   split_file: ${.cryovit_root}/cryovit_dataset/csv/splits.csv
 
@@ -10,15 +10,16 @@ exp_paths:
 
 defaults:
   - model: ???
-  - dataset: ???
-  - trainer: trainer_fit
-  - train_model_config
+  - trainer: trainer_eval
+  - eval_model_config
   - _self_
   - override hydra/hydra_logging: rich_logger
   - override hydra/job_logging: rich_logger
 
 hydra:
   mode: MULTIRUN
+  # sweeper:
+  #   params:
   sweep:
     dir: /tmp/${oc.env:USER}/multirun
 
