--- a/cryovit/configs/eval_model.yaml
+++ b/cryovit/configs/eval_model.yaml
@@ -19,6 +19,21 @@ defaults:
 
 hydra:
   mode: MULTIRUN
+  sweeper:
+    params:
+      dataset.sample:
+        BACHD,
+        dN17_BACHD,
+        Q109,
+        Q18,
+        Q20,
+        Q53,
+        Q53_KD,
+        Q66,
+        Q66_GRFS1,
+        Q66_KD,
+        WT,
+        cancer
   sweep:
     dir: /tmp/${oc.env:USER}/multirun
 
