--- a/env.yml
+++ b/env.yml
@@ -12,6 +12,7 @@ dependencies:
   - pytorch::pytorch-cuda=11.7
   - pytorch-lightning=2.0.2
   - conda-forge::hydra-core=1.3.2
+  - mkl==2024.0
   - pip
   - pip:
       - xformers==0.0.18
